Bug 1659432 - Don't reuse the existing print job when restarting print preview. r=bobowen

Differential Revision: https://phabricator.services.mozilla.com/D87417